mass commit leading to 1.9 alpha
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base@598 7c7dc5f5-a22d-0410-a3af-b41755a11667